nettoyage du code