@@ -1,16 +1,15 @@
 package org.esupportail.referentiel.pcscol.services;
 
 import java.text.SimpleDateFormat;
+import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
-import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import org.esupportail.referentiel.beans.ApprenantDto;
-import org.esupportail.referentiel.beans.EtapeInscription;
 import org.esupportail.referentiel.pcscol.api.CursusApi;
 import org.esupportail.referentiel.pcscol.api.ExtractionsApi;
 import org.esupportail.referentiel.pcscol.chcExterneV1.model.ApprenantPourext;
@@ -27,18 +26,14 @@ import org.springframework.stereotype.Service;
 @ConditionalOnProperty(name = "app.mode_pegase")
 public class ChcExterneService {
 
-	// TODO : A implementer
-	private final transient Logger logger = LoggerFactory.getLogger(this.getClass());
+	private final Logger logger = LoggerFactory.getLogger(this.getClass());
 	@Autowired
 	private ExtractionsApi extractionsApi;
-	
-	
+
 	@Autowired
 	private CursusApi cursusApi;
 
-	public ChcExterneService() {
-
-	}
+	
 
 	/**
 	 * 
@@ -49,12 +44,12 @@ public class ChcExterneService {
 	 */
 	public List<CursusPourext> getCursusPourext(String codeStructure, String codePeriode, String codeObjetFormation) {
 		try {
-			List<CursusPourext> cursus = extractionsApi.extraireCursusObjetFormationPeriode(codeStructure, codePeriode,
-					codeObjetFormation);
-			return cursus;
+			return extractionsApi.extraireCursusObjetFormationPeriode(codeStructure, codePeriode, codeObjetFormation);
 		} catch (ApiException e) {
-			logger.error(e.getMessage() + " :" + e.getMessage());
-			return null;
+			logger.error(
+					"Erreur lors de l'extraction des cursus pour la structure {}, la période {} et l'objet de formation {} : {}",
+					codeStructure, codePeriode, codeObjetFormation, e.getMessage());
+			return Collections.emptyList();
 		}
 	}
 
@@ -71,7 +66,7 @@ public class ChcExterneService {
 		List<CursusPourext> cursus = getCursusPourext(codeStructure, codePeriode, codeObjetFormation);
 		cursus = cursus.stream().filter(c -> Pattern
 				.compile(Pattern.quote(codeObjetFormationParent + ">") + ".*" + Pattern.quote(codeObjetFormation))
-				.matcher(c.getObjetFormation().getChemin()).find()).collect(Collectors.toList());
+				.matcher(c.getObjetFormation().getChemin()).find()).toList();
 		return cursus;
 	}
 
@@ -91,47 +86,43 @@ public class ChcExterneService {
 				codeObjetFormation);
 		List<CursusPourext> cursus = getCursusPourext(codeStructure, codePeriode, codeObjetFormation);
 		/*
-		 * Verification de objet formation parent
-		 * si le chemin de l'objet formation contient le codeObjetFormationParent
-		 * cas ou le codeObjetFormationParent est PIA coincide avec le codeObjetFormation==codeObjetFormationParent
-		 * dans ce cas on ne filtre pas mais il faut s'assurer que le codeObjetFormationParent est PIA
-		 * TODO : A verifier et à implementer
+		 * Verification de objet formation parent si le chemin de l'objet formation
+		 * contient le codeObjetFormationParent cas ou le codeObjetFormationParent est
+		 * PIA coincide avec le codeObjetFormation==codeObjetFormationParent dans ce cas
+		 * on ne filtre pas mais il faut s'assurer que le codeObjetFormationParent est
+		 * PIA TODO : A verifier et à implementer
 		 */
-		
+
 		if (cursus == null || cursus.isEmpty()) {
 			logger.error("getCursusPourext : Aucun cursus trouvé pour les paramètres donnés {} {} {}.", codeStructure,
 					codePeriode, codeObjetFormation);
 			logger.debug("Aucun cursus trouvé pour les paramètres donnés.");
-			return null;
+			return Collections.emptyList();
 		}
 		cursus = cursus.stream().filter(c -> Pattern
 				.compile(Pattern.quote(codeObjetFormationParent + ">") + ".*" + Pattern.quote(codeObjetFormation))
-				.matcher(c.getObjetFormation().getChemin()).find()).collect(Collectors.toList());
-		logger.debug("Cursus : " + cursus);
-		if (cursus == null || cursus.isEmpty()) {
-			return null;
+				.matcher(c.getObjetFormation().getChemin()).find()).toList();
+		logger.debug("getCursusPourext : {} cursus trouvés pour les paramètres donnés {} {} {}.", cursus.size(),
+				codeStructure, codePeriode, codeObjetFormation);
+		if (cursus.isEmpty()) {
+			return Collections.emptyList();
 		}
 		/*
-		 * si le codeApprenant est null ou vide on verifie que le nom est prenom 
-		 *  renvoie tous les apprenants si les trois parametres sont null ou vide
+		 * si le codeApprenant est null ou vide on verifie que le nom est prenom renvoie
+		 * tous les apprenants si les trois parametres sont null ou vide
 		 */
 		if (codeApprenant != null && !codeApprenant.isEmpty()) {
-			List<ApprenantPourext> apprenants = cursus.stream()
-					.flatMap(cursus1 -> cursus1.getListeApprenants().stream())
-					.filter(apprenant -> apprenant.getCodeApprenant().equals(codeApprenant))
-					.collect(Collectors.toList());
-			return apprenants;
+			return cursus.stream().flatMap(cursus1 -> cursus1.getListeApprenants().stream())
+					.filter(apprenant -> apprenant.getCodeApprenant().equals(codeApprenant)).toList();
 
 		}
 
 		if (nom != null && !nom.isEmpty() && prenom != null && !prenom.isEmpty()) {
-			List<ApprenantPourext> apprenants = cursus.stream()
-					.flatMap(cursus1 -> cursus1.getListeApprenants().stream())
+			return cursus.stream().flatMap(cursus1 -> cursus1.getListeApprenants().stream())
 					.filter(apprenant -> apprenant.getNomFamille().equals(nom) && apprenant.getPrenom().equals(prenom))
-					.collect(Collectors.toList());
-			return apprenants;
+					.toList();
 		}
-		return cursus.stream().flatMap(cursus1 -> cursus1.getListeApprenants().stream()).collect(Collectors.toList());
+		return cursus.stream().flatMap(cursus1 -> cursus1.getListeApprenants().stream()).toList();
 
 	}
 
@@ -146,10 +137,7 @@ public class ChcExterneService {
 			String codeObjetFormation) {
 		List<CursusPourext> cursusPourext = getCursusPourext(codeStructure, codePeriode, codeObjetFormation);
 
-		List<ApprenantPourext> apprenants = cursusPourext.stream()
-				.flatMap(cursus -> cursus.getListeApprenants().stream()).collect(Collectors.toList());
-
-		return apprenants;
+		return cursusPourext.stream().flatMap(cursus -> cursus.getListeApprenants().stream()).toList();
 	}
 
 	/**
@@ -164,9 +152,7 @@ public class ChcExterneService {
 			String codeObjetFormation, String codeApprenant) {
 		List<ApprenantPourext> apprenants = rechercheListApprenantPourCursusPourext(codeStructure, codePeriode,
 				codeObjetFormation);
-		List<ApprenantPourext> apprenant = apprenants.stream()
-				.filter(apprenant1 -> apprenant1.getCodeApprenant().equals(codeApprenant)).collect(Collectors.toList());
-		return apprenant;
+		return apprenants.stream().filter(apprenant1 -> apprenant1.getCodeApprenant().equals(codeApprenant)).toList();
 	}
 
 	/**
@@ -182,10 +168,9 @@ public class ChcExterneService {
 			String codeObjetFormation, String nom, String prenom) {
 		List<ApprenantPourext> apprenants = rechercheListApprenantPourCursusPourext(codeStructure, codePeriode,
 				codeObjetFormation);
-		List<ApprenantPourext> apprenant = apprenants.stream()
+		return apprenants.stream()
 				.filter(apprenant1 -> apprenant1.getNomFamille().equals(nom) && apprenant1.getPrenom().equals(prenom))
-				.collect(Collectors.toList());
-		return apprenant;
+				.toList();
 	}
 
 	/**
@@ -194,20 +179,19 @@ public class ChcExterneService {
 	 * @return
 	 */
 	public List<ApprenantDto> mapperApprenantPourextToApprenantDto(List<ApprenantPourext> apprenants) {
-//		if (apprenants == null || apprenants.isEmpty()) {
-//			return null;
-//		}
-
-		List<ApprenantDto> apprenant = apprenants.stream()
+		if (apprenants == null || apprenants.isEmpty()) {
+			logger.error("mapperApprenantPourextToApprenantDto : Aucun apprenant trouvé.");
+			return Collections.emptyList();
+		}
+		return apprenants.stream()
 				.map(apprenant1 -> new ApprenantDto(apprenant1.getCodeApprenant(), apprenant1.getNomFamille(),
 						apprenant1.getPrenom(), formateDate(apprenant1.getDateNaissance()), null, null))
-				.collect(Collectors.toList());
-		return apprenant;
+				.toList();
 	}
 
 	private String formateDate(Date dateNaissance) {
-		SimpleDateFormat DATE_FORMAT = new SimpleDateFormat("dd-MM-yyyy");
-		return dateNaissance != null ? DATE_FORMAT.format(dateNaissance) : null;
+		SimpleDateFormat dateformat = new SimpleDateFormat("dd-MM-yyyy");
+		return dateNaissance != null ? dateformat.format(dateNaissance) : null;
 	}
 
 	/**
@@ -227,26 +211,27 @@ public class ChcExterneService {
 		List<ApprenantPourext> apprenants = getCursusPourext(codeStructure, codePeriode, codeObjetFormation,
 				codeObjetFormationParent, codeApprenant, nom, prenom);
 		if (apprenants == null || apprenants.isEmpty()) {
-			return null;
+			return Collections.emptyList();
 		}
-		logger.debug("getApprenantDto : " + apprenants.size());
+		logger.debug("getApprenantDto : {} apprenants trouvés pour les paramètres donnés {} {} {} {} {}.",
+				apprenants.size(), codeStructure, codePeriode, codeObjetFormation, codeObjetFormationParent,
+				codeApprenant);
 		return mapperApprenantPourextToApprenantDto(apprenants);
 
 	}
-	
-	
+
 	public List<Cursus> chercherCursusApprenant(String codeAppreanant) {
-	    logger.debug("CursusExterneService : chercherCursusApprenant : " + codeAppreanant);
+		logger.debug("CursusExterneService : chercherCursusApprenant : {} ", codeAppreanant);
 		try {
-			List<Cursus> cursus = cursusApi.lireCursusApprenant(codeAppreanant);
-			return cursus;
+			return cursusApi.lireCursusApprenant(codeAppreanant);
 		} catch (Exception e) {
-			logger.error(e.getMessage() + " :" + e.getMessage());
-			return null;
+			logger.error("Erreur lors de la recherche des cursus pour l'apprenant {} : {}", codeAppreanant,
+					e.getMessage());
+			return Collections.emptyList();
 		}
-		
+
 	}
-	
+
 	/**
 	 * 
 	 * @param codeAppreanant
@@ -254,55 +239,30 @@ public class ChcExterneService {
 	 * @return
 	 */
 	public List<Cursus> chercherCursusApprenant(String codeAppreanant, String codePeriode) {
-		logger.debug("CursusExterneService : chercherCursusApprenant : " + codeAppreanant + " " + codePeriode);
+		logger.debug("CursusExterneService : chercherCursusApprenant : {}  {}", codeAppreanant, codePeriode);
 		List<Cursus> cursus = chercherCursusApprenant(codeAppreanant);
 		return cursus.stream().filter(c -> c.getPeriode().getCode().equals(codePeriode)).toList();
 	}
+
 	/**
 	 * 
 	 * @param codeAppreanant
 	 * @param codePeriode
 	 * @return
 	 */
-	
+
 	public Map<String, String> chercherEtapeApprenant(String codeAppreanant, String codePeriode) {
-		logger.debug("CursusExterneService : chercherEtapeApprenant : " + codeAppreanant + " " + codePeriode);
+		logger.debug(" CursusExterneService : chercherEtapeApprenant : {}  {}", codeAppreanant, codePeriode);
 		List<Cursus> cursus = chercherCursusApprenant(codeAppreanant, codePeriode);
 		Map<String, String> map = new HashMap<>();
 		for (Cursus c : cursus) {
 			String codeObjetMaquette = c.getRacinePedagogique().getCodeObjetMaquette();
 			String libelle = c.getRacinePedagogique().getLibelleLongObjetMaquette();
-			
-			map.put(codeObjetMaquette+";"+codePeriode, libelle);
+
+			map.put(codeObjetMaquette + ";" + codePeriode, libelle);
 		}
 		return map;
 	}
-	
-	/**
-	 * 
-	 * @param codeAppreanant
-	 * @param codePeriode
-	 * @return
-	 */
-	public List<EtapeInscription> chercherEtapeInscriptionApprenant(String codeAppreanant, String codePeriode) {
-		logger.debug(
-				"CursusExterneService : chercherEtapeInscriptionApprenant : " + codeAppreanant + " " + codePeriode);
-		List<Cursus> cursus = chercherCursusApprenant(codeAppreanant, codePeriode);
-		List<EtapeInscription> list = cursus.stream().map(c -> {
-			EtapeInscription etapeInscription = new EtapeInscription();
-			
-			return etapeInscription;
-		}).collect(Collectors.toList());
-
-		return list;
-	}
-	
-	
-	
-	
-	
-	
-	
 
 	public ExtractionsApi getExtractionsApi() {
 		return extractionsApi;
